tools/tests/ui/fail/l1057.cnf
// Test file for error code: L1057
// Expected error: Overflow Malformed character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
